samples/_failures_safe/1761002368_c0d949_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_afb44da3.c: In function ‘main’:
./samples/SAFE/__tmp_afb44da3.c:134:5: error: expected declaration or statement at end of input
  134 |     printf("3: Transpose\n");
      |     ^~~~~~
